# data-compass

./: .env.example  .gitignore  BRIEF.md  HANDOFF.md  PLAN.md  app.py  pyproject.toml  qc_screenshots.py
.streamlit/: config.toml  secrets.toml.example
data/: prepare.py  registry.py
data/land_registry/: properties.csv  transactions.csv
data/weather/: observations.csv  stations.csv
docs/: AI_CONTEXT.md  CHARTROOM.md  DATA_LICENCES.md  DEPLOY.md  PRIVACY_NOTICE.md  README.md
locales/: en-GB.json
src/data_compass/: __init__.py  config.py  i18n.py
src/data_compass/auth/: api_key.py  key_router.py  policy.py  recruiter.py  resource.py  store.py
src/data_compass/cache/: __init__.py  adjudicate.py  exact.py  generate.py  resource.py  semantic.py  store.py
src/data_compass/core/: costing.py  query_flow.py
tests/: test_adjudicate.py  test_api_key.py  test_audit.py  test_auth_store.py  test_autochart.py  test_cache_store.py  test_config.py  test_consent.py  test_costing.py  test_erd_validate.py  test_exact.py  test_generate.py  test_guard.py  test_i18n.py  test_infer.py  test_key_router.py  test_landing.py  test_loader.py  test_mask.py  test_phase_7_completion.py  test_phase_9_completion.py  test_pii_classify.py  test_pii_scan.py  test_plausibility.py  test_policy.py  test_recruiter.py  test_results_fmt.py  test_semantic.py  test_sql_prompt.py  test_sql_sandbox.py  test_step_2_1.py  test_step_2_3.py  test_step_3_4.py  test_step_4_4.py  test_step_5_6.py  test_step_6_5.py  test_step_7_5.py  test_step_8_2.py  test_step_8_5.py  test_step_8_phase.py  (+8 more)
(+31 files in other folders)
