[build-system]
requires = ["setuptools>=49"]
build-backend = "setuptools.build_meta"

[project]
name = "data-compass"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "anthropic>=0.29",
    "duckdb>=1.0",
    "pandas>=2.0",
    "plotly>=5.0",
    "faiss-cpu>=1.8",
    "sentence-transformers>=3.0",
    "sqlglot>=23",
    "python-dotenv>=1.0",
    "argon2-cffi>=23",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]
